--- a/index.html
+++ b/index.html
@@ -11,29 +11,26 @@
 <body>
     <div class="calcBackground">
         <div class="display">
-            <p class="equation"></p>
+            <p class="equation">10 + 5</p>
         </div>
-        <div class="keypad">
-            <button class="clear">AC</button>
-            <button class="clear">C</button>
-            <button class="operators">/</button>
-            <button class="numbers">7</button>
-            <button class="numbers">8</button>
-            <button class="numbers">9</button>
-            <button class="operators">*</button>
-            <button class="numbers">4</button>
-            <button class="numbers">5</button>
-            <button class="numbers">6</button>
-            <button class="operators">-</button>
-            <button class="numbers">1</button>
-            <button class="numbers">2</button>
-            <button class="numbers">3</button>
-            <button class="operators">+</button>
-            <button class="numbers zero">0</button>
-            <button class="numbers">.</button>
-            <button class="equal">=</button>
-        </div>
-    </div>
-    
+        <button class="clear">AC</button>
+        <button class="clear">C</button>
+        <button class="operators">/</button>
+        <button class="numbers">7</button>
+        <button class="numbers">8</button>
+        <button class="numbers">9</button>
+        <button class="operators">*</button>
+        <button class="numbers">4</button>
+        <button class="numbers">5</button>
+        <button class="numbers">6</button>
+        <button class="operators">-</button>
+        <button class="numbers">1</button>
+        <button class="numbers">2</button>
+        <button class="numbers">3</button>
+        <button class="operators">+</button>
+        <button class="numbers zero">0</button>
+        <button class="numbers">.</button>
+        <button class="equal">=</button>
+    </div>  
 </body>
 </html>
