--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <div class="calcBackground">
         <div class="display">
-            <p class="equation">10 + 5</p>
+            <p class="equation"></p>
         </div>
-        <button class="clear">AC</button>
-        <button class="clear">C</button>
+        <button class="clear ac">AC</button>
+        <button class="clear c">C</button>
         <button class="operators">/</button>
         <button class="numbers">7</button>
         <button class="numbers">8</button>
@@ -29,7 +29,7 @@
         <button class="numbers">3</button>
         <button class="operators">+</button>
         <button class="numbers zero">0</button>
-        <button class="numbers">.</button>
+        <button class="float">.</button>
         <button class="equal">=</button>
     </div>  
 </body>
